5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1671_1100.log
== TEST (2019-04-19 19:55:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
if((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!=50) or (v!=100):
	print(" Animal: Invalido ")
	
-- ERROR:
File "XXXX", line 5
    if((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!=50) or (v!=100):
                                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 19:55:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
if((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!=50) or (v!=100)):
	print(" Animal: Invalido ")
	
-- OUTPUT:
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 19:58:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
if((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!=50) or (v!=100)):
	print(" Animal: Invalido ")
	else:
		if(v==2):
			print(" Tartaruga ")
	
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 19:58:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
if((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!=50) or (v!=100)):
	print(" Animal: Invalido ")
else:
		if(v==2):
			print(" Tartaruga ")
	
-- OUTPUT:
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 19:59:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
if((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!=50) or (v!=100)):
	print(" Animal: Invalido ")
	else:
		if(v==2):
		print(" Tartaruga ")
	
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 19:59:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
if((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!=50) or (v!=100)):
	print(" Animal: Invalido ")
else:
		if(v==2):
		print(" Tartaruga ")
	
-- ERROR:
File "XXXX", line 9
    print(" Tartaruga ")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 19:59:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
if((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!=50) or (v!=100)):
	print(" Animal: Invalido ")
else:
		if(v==2):
	print(" Tartaruga ")
	
-- ERROR:
File "XXXX", line 9
    print(" Tartaruga ")
                       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 19:59:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
if((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!=50) or (v!=100)):
	print(" Animal: Invalido ")
else:
		if(v==2):
	   print(" Tartaruga ")
	
-- ERROR:
File "XXXX", line 9
    print(" Tartaruga ")
                       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 19:59:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
if((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!=50) or (v!=100)):
	print(" Animal: Invalido ")
else:
		if(v==2):
	   print(Tartaruga)
	
-- ERROR:
File "XXXX", line 9
    print(Tartaruga)
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:00:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
if((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!=50) or (v!=100)):
	print(" Animal: Invalido ")
-- OUTPUT:
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:00:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
if((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!=50) or (v!=100)):
	print(" Animal: Invalido ")
-- OUTPUT:
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 20:00:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
if((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!=50) or (v!=100)):
	print(" Animal: Invalido ")
	else:
		print("Animal Valido")
-- EXECUTION TIME:
0.200165
-- ERROR:
  File "/home/codebench/codes/1671/1100/main.py", line 7
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:00:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
if((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!=50) or (v!=100)):
	print(" Animal: Invalido ")
	else:
		print("Animal Valido")
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:01:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
if((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!=50) or (v!=100)):
	print(" Animal: Invalido ")
	
-- OUTPUT:
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:02:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
if((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!=50) or (v!=100)):
	print(" Animal: Invalido ")
	
-- OUTPUT:
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:02:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
if((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!=50) or (v!=100)):
	print(" Animal: Invalido ")
	else:
		if(v==2):
			print("Animal: Tartaruga")
	
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:04:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
if((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!=50) or (v!=100)):
	print(" Animal: Invalido ")
else:
	if(v==2):
		print("Animal: Tartaruga")
			
	
-- OUTPUT:
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:05:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
if("v"==2):
	print("Animal: Tartaruga")
			
	
-- OUTPUT:
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:05:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
if("v"==2):
	print(Animal: Tartaruga)
			
	
-- ERROR:
File "XXXX", line 6
    print(Animal: Tartaruga)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:05:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
if("v"==2):
	print(Tartaruga)
			
	
-- ERROR:
File "XXXX", line 6
    print(Animal: Tartaruga)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:06:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = float(input(" Digite o valor: "))
if("v"==2):
	print(Tartaruga)
	
			
	
-- ERROR:
File "XXXX", line 6
    print(Animal: Tartaruga)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:49:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = float(input(" Digite o valor: "))
if(v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
	if(v==2):
		mensagem = "Tartaruga"
		print("Animal:",mensagem)
	elif(v==5):
		mensagem= "Garca"
		print("Animal:",mensagem)
	elif(v==10):
		mensagem= "Arara"
		print("Animal:",mensagem)
	elif(v==20):
		mensagem= "Mico-leao-dourado"
		print("Animal:",mensagem)
	elif(v==50):
		mensagem = " Onca pintada "
		print("Animal:",mensagem)
	else:
		mensagem= "Garoupa"
		print("Animal:",mensagem)
else:
	mensagem= " Invalido "
	print("Animal:",mensagem)
		
		
	
			
	
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:49:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = float(input(" Digite o valor: "))
if(v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
	if(v==2):
		mensagem = "Tartaruga"
		print("Animal:",mensagem)
	elif(v==5):
		mensagem= "Garca"
		print("Animal:",mensagem)
	elif(v==10):
		mensagem= "Arara"
		print("Animal:",mensagem)
	elif(v==20):
		mensagem= "Mico-leao-dourado"
		print("Animal:",mensagem)
	elif(v==50):
		mensagem = " Onca pintada "
		print("Animal:",mensagem)
	else:
		mensagem= "Garoupa"
		print("Animal:",mensagem)
else:
	mensagem= " Invalido "
	print("Animal:",mensagem)
		
		
	
			
	
-- EXECUTION TIME:
0.125615
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal:  Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal:  Onca pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:50:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = float(input(" Digite o valor: "))
if(v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
	if(v==2):
		mensagem = "Tartaruga"
		print("Animal:",mensagem)
	elif(v==5):
		mensagem= "Garca"
		print("Animal:",mensagem)
	elif(v==10):
		mensagem= "Arara"
		print("Animal:",mensagem)
	elif(v==20):
		mensagem= "Mico-leao-dourado"
		print("Animal:",mensagem)
	elif(v==50):
		mensagem = " Onca-pintada "
		print("Animal:",mensagem)
	else:
		mensagem= "Garoupa"
		print("Animal:",mensagem)
else:
	mensagem= " Invalido "
	print("Animal:",mensagem)
		
		
	
			
	
-- EXECUTION TIME:
0.159877
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal:  Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal:  Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:50:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = float(input(" Digite o valor: "))
print(" Entrada:",v)
if(v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
	if(v==2):
		mensagem = "Tartaruga"
		print("Animal:",mensagem)
	elif(v==5):
		mensagem= "Garca"
		print("Animal:",mensagem)
	elif(v==10):
		mensagem= "Arara"
		print("Animal:",mensagem)
	elif(v==20):
		mensagem= "Mico-leao-dourado"
		print("Animal:",mensagem)
	elif(v==50):
		mensagem = " Onca-pintada "
		print("Animal:",mensagem)
	else:
		mensagem= "Garoupa"
		print("Animal:",mensagem)
else:
	mensagem= " Invalido "
	print("Animal:",mensagem)
		
		
	
			
	
-- OUTPUT:
Entrada: 100.0
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:51:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
print(" Entrada:",v)
if(v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
	if(v==2):
		mensagem = "Tartaruga"
		print("Animal:",mensagem)
	elif(v==5):
		mensagem= "Garca"
		print("Animal:",mensagem)
	elif(v==10):
		mensagem= "Arara"
		print("Animal:",mensagem)
	elif(v==20):
		mensagem= "Mico-leao-dourado"
		print("Animal:",mensagem)
	elif(v==50):
		mensagem = " Onca-pintada "
		print("Animal:",mensagem)
	else:
		mensagem= "Garoupa"
		print("Animal:",mensagem)
else:
	mensagem= " Invalido "
	print("Animal:",mensagem)
		
		
	
			
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:51:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
print(" Entrada:",v)
if(v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
	if(v==2):
		mensagem = "Tartaruga"
		print("Animal:",mensagem)
	elif(v==5):
		mensagem= "Garca"
		print("Animal:",mensagem)
	elif(v==10):
		mensagem= "Arara"
		print("Animal:",mensagem)
	elif(v==20):
		mensagem= "Mico-leao-dourado"
		print("Animal:",mensagem)
	elif(v==50):
		mensagem = " Onca-pintada "
		print("Animal:",mensagem)
	else:
		mensagem= "Garoupa"
		print("Animal:",mensagem)
else:
	mensagem= " Invalido "
	print("Animal:",mensagem)
		
		
	
			
	
-- EXECUTION TIME:
0.201072
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal:  Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal:  Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:30:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
print(" Entrada:",v)
if((v==2) or (v==5) or v==10 or v==20 or v==50 or v==100):
	if(v==2):
		mensagem = "Tartaruga"
		print("Animal:",mensagem)
	elif(v==5):
		mensagem= "Garca"
		print("Animal:",mensagem)
	elif(v==10):
		mensagem= "Arara"
		print("Animal:",mensagem)
	elif(v==20):
		mensagem= "Mico-leao-dourado"
		print("Animal:",mensagem)
	elif(v==50):
		mensagem = " Onca-pintada "
		print("Animal:",mensagem)
	else:
		mensagem= "Garoupa"
		print("Animal:",mensagem)
else:
	mensagem= " Invalido "
	print("Animal:",mensagem)
		
		
	
			
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:30:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
print(" Entrada:",v)
if((v==2) or (v==5) or v==10 or v==20 or v==50 or v==100):
	if(v==2):
		mensagem = "Tartaruga"
		print("Animal:",mensagem)
	elif(v==5):
		mensagem= "Garca"
		print("Animal:",mensagem)
	elif(v==10):
		mensagem= "Arara"
		print("Animal:",mensagem)
	elif(v==20):
		mensagem= "Mico-leao-dourado"
		print("Animal:",mensagem)
	elif(v==50):
		mensagem = " Onca-pintada "
		print("Animal:",mensagem)
	else:
		mensagem= "Garoupa"
		print("Animal:",mensagem)
else:
	mensagem= " Invalido "
	print("Animal:",mensagem)
		
		
	
			
	
-- EXECUTION TIME:
0.15106
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal:  Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal:  Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:31:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
print(" Entrada:",v)
if((v==2) or (v==5) or (v==10) or (v==20) or (v==50) or (v==100)):
	if(v==2):
		mensagem = "Tartaruga"
		print("Animal:",mensagem)
	elif(v==5):
		mensagem= "Garca"
		print("Animal:",mensagem)
	elif(v==10):
		mensagem= "Arara"
		print("Animal:",mensagem)
	elif(v==20):
		mensagem= "Mico-leao-dourado"
		print("Animal:",mensagem)
	elif(v==50):
		mensagem = " Onca-pintada "
		print("Animal:",mensagem)
	else:
		mensagem= "Garoupa"
		print("Animal:",mensagem)
else:
	mensagem= " Invalido "
	print("Animal:",mensagem)
		
		
	
			
	
-- EXECUTION TIME:
0.123137
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal:  Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal:  Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:31:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
print(" Entrada:",v)
if((v==2) or (v==5) or (v==10) or (v==20) or (v==50) or (v==100)):
	if(v==2):
		mensagem = "Tartaruga"
		print("Animal:",mensagem)
	elif(v==5):
		mensagem= "Garca"
		print("Animal:",mensagem)
	elif(v==10):
		mensagem= "Arara"
		print("Animal:",mensagem)
	elif(v==20):
		mensagem= "Mico-leao-dourado"
		print("Animal:",mensagem)
	elif(v==50):
		mensagem = " Onca-pintada "
		print("Animal:",mensagem)
	else:
		mensagem= "Garoupa"
		print("Animal:",mensagem)
else:
	mensagem= " Invalido "
	print("Animal:",mensagem)
		
		
	
			
	
-- EXECUTION TIME:
0.184438
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal:  Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal:  Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:31:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v = int(input(" Digite o valor: "))
print(" Entrada:",v)
if((v==2) or (v==5) or (v==10) or (v==20) or (v==50) or (v==100)):
	if(v==2):
		mensagem = "Tartaruga"
		print("Animal:",mensagem)
	elif(v==5):
		mensagem= "Garca"
		print("Animal:",mensagem)
	elif(v==10):
		mensagem= "Arara"
		print("Animal:",mensagem)
	elif(v==20):
		mensagem= "Mico-leao-dourado"
		print("Animal:",mensagem)
	elif(v==50):
		mensagem = " Onca-pintada "
		print("Animal:",mensagem)
	else:
		mensagem= "Garoupa"
		print("Animal:",mensagem)
else:
	mensagem= " Invalido "
	print("Animal:",mensagem)
		
		
	
			
	
-- EXECUTION TIME:
0.129138
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal:  Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal:  Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
